# ttp-staleness

./: README.md  pyproject.toml
src/ttp_staleness/: __init__.py  attack_client.py  cache.py  cli.py  console.py  models.py  reporter.py  rule_parser.py  scorer.py  settings.py
src/ttp_staleness/templates/: report.html.j2
tests/: conftest.py  test_attack_client.py  test_cli.py  test_console.py  test_models.py  test_reporter.py  test_rule_parser.py  test_scorer.py  test_settings.py
tests/fixtures/sigma/: rule_deprecated_status.yml  rule_multiple_techniques.yml  rule_no_attack_tags.yml  rule_no_tags.yml  rule_with_parent_only.yml  rule_with_subtechnique.yml
