[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ttp-staleness"
version = "0.1.0"
description = "Score your Sigma/KQL/EQL detection rules for ATT&CK technique staleness"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "click>=8.2",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "rich>=13.0",
    "mitreattack-python>=3.0",
    "requests>=2.31",
    "pySigma>=0.10",
    "jinja2>=3.1",
]

[project.urls]
Homepage = "https://github.com/Detect-Forge/ttp-staleness"
Repository = "https://github.com/Detect-Forge/ttp-staleness"
Issues = "https://github.com/Detect-Forge/ttp-staleness/issues"

[project.scripts]
ttp-staleness = "ttp_staleness.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "requests-mock>=1.11",
    "mypy>=1.8",
    "ruff>=0.3",
    "types-requests>=2.31",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ttp_staleness"]
include = ["src/ttp_staleness/templates/*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
python_version = "3.12"

[[tool.mypy.overrides]]
module = ["mitreattack.*", "sigma.*", "requests_mock.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
